test(SE-62): create test cases for PropertyRateSettingsServiceImpl